added cf push command details